modules/webgl/tests/005.vs.exp
"005.vs":2: L0001: Parse error: 
some_junk_causing_a_parse_error

bool success;
bool done = false;
