modules/webgl/tests/005.vs
// example of ill-formed input.
some_junk_causing_a_parse_error

bool success;
bool done = false;
